--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,32 +1,13 @@
 {% include header.html %}
 
-
-    <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-      <div class="container">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="#"> {{site.name}}</a>
-        </div>
-        <div class="collapse navbar-collapse">
-          <ul class="nav navbar-nav">
-            <li class="active"><a href="#">Home</a></li>
-            <li><a href="#about">About</a></li>
-            <li><a href="#contact">Contact</a></li>
-          </ul>
-        </div><!--/.nav-collapse -->
-      </div>
-    </div>
+{% include navbar.html %}
 
 
     <div class="container" id='content-container'>
 
     <div class="row">
-      <div class="col-md-8">
+      {% include sidebar.html %}
+      <div class="col-md-9">
         <div class="starter-template" id='page-content'>
 
           <h1> {{ page.title }}</h1>
@@ -35,7 +16,6 @@
       </div>
 
 
-    {% include sidebar.html %}
     </div>
 
 
