Change container to container-fluid, extract to header/footer

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,3 +1,6 @@
+      </div>
+    </div>
+    
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
