--- a/_layouts/manual.html
+++ b/_layouts/manual.html
@@ -1,34 +1,25 @@
 {% include header.html %}
-
 {% include navbar.html %}
+{% include sidebar.html %}
 
+<div class="col-md-6">
+  <div class="starter-template" id='page-content'>
+    <h1> {{ page.title }}</h1>
+    {{ content }}
+   </div>       
+ </div>
 
-
-
-
-    {% include sidebar.html %}
-
-
-
-     <div class="col-md-6">
-       <div class="starter-template" id='page-content'>
-
-         <h1> {{ page.title }}</h1>
-         {{ content }}
-       </div>       
-     </div>
-    
-    <div class="col-md-3">
-       <div class="bs-doc-sidebar hiden-print affix" role="complimentary">
-        <ul class="nav bs-docs-sidenav">
-          {% for post in site.posts %}
-            <li>
-              <a href="#{{post.post-id}}"> {{post.title}}</a>
-            </li>
-          {% endfor %}
-        </ul>
-      </div>
-    </div>
+<div class="col-md-3">
+   <div class="user-guide-sidebar hiden-print affix" role="complimentary">
+    <ul class="nav user-guide-sidenav">
+      {% for post in site.posts %}
+        <li>
+          <a href="#{{post.post-id}}"> {{post.title}}</a>
+        </li>
+      {% endfor %}
+    </ul>
+  </div>
+</div>
 
 
 {% include footer.html %}
