Shfit window when using user-guide nav so not hidden by top nav bar

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -22,9 +22,13 @@
       <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
       <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
+    <script>
+      var shiftWindow = function() { scrollBy(0, -50) };
+      window.addEventListener("hashchange", shiftWindow);
+      function load() { if (window.location.hash) shiftWindow(); }
+    </script>
   </head>
-
-  <body>
+  <body onload="load()">
 
   <div class="container-fluid" id='content-container'>
     <div class="row">
