--- a/css/starter-template.css
+++ b/css/starter-template.css
@@ -7,7 +7,10 @@ body {
 }
 
 #pipe-img {
-  max-width: 70%;
+  max-width: 90%;
+  display: block;
+  margin-left: auto;
+  margin-right: auto
 }
 
 
