--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -13,6 +13,7 @@
     <div class="collapse navbar-collapse">
       <ul class="nav navbar-nav">
         <li><a href="user_guide.html">User Guide</a></li>
+        <li><a href="whats_changed.html">What's changed</a></li>
       </ul>
     </div><!--/.nav-collapse -->
   </div>
