Improve User guide
* Rename the posts by pre-prending them with an alphabet letter
  this defines the order in which they should appear
* Improve the wording of a few sections
* Add a section, with examples about functional rates

--- a/_layouts/manual.html
+++ b/_layouts/manual.html
@@ -12,7 +12,7 @@
 <div class="col-md-3">
    <div class="user-guide-sidebar hiden-print affix" role="complimentary">
     <ul class="nav user-guide-sidenav">
-      {% for post in site.posts %}
+      {% for post in site.posts reversed %}
         <li>
           <a href="#{{post.post-id}}"> {{post.title}}</a>
         </li>
