ReachabilitGraph contains vanishing state inclusion checkbox, #52
* Create relevant VanishingExplorer

--- a/pipe-module-gui/src/main/java/pipe/gui/reachability/ReachabilityGraph.form
+++ b/pipe-module-gui/src/main/java/pipe/gui/reachability/ReachabilityGraph.form
@@ -6,9 +6,11 @@
     <rowspec value="center:max(d;4px):noGrow"/>
     <rowspec value="top:3dlu:noGrow"/>
     <rowspec value="center:max(d;4px):noGrow"/>
+    <rowspec value="top:3dlu:noGrow"/>
+    <rowspec value="center:max(d;4px):noGrow"/>
     <colspec value="fill:d:grow"/>
     <constraints>
-      <xy x="20" y="20" width="554" height="568"/>
+      <xy x="20" y="20" width="554" height="610"/>
     </constraints>
     <properties>
       <enabled value="false"/>
@@ -88,7 +90,7 @@
       </grid>
       <component id="3fb2a" class="javax.swing.JButton" binding="goButton" default-binding="true">
         <constraints>
-          <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
           <forms defaultalign-vert="false"/>
         </constraints>
         <properties>
@@ -97,7 +99,7 @@
       </component>
       <grid id="5507e" binding="resultsPanel" layout-manager="GridBagLayout">
         <constraints>
-          <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+          <grid row="6" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
           <forms/>
         </constraints>
         <properties>
@@ -106,6 +108,27 @@
         </properties>
         <border type="none"/>
         <children/>
+      </grid>
+      <grid id="ea076" layout-manager="FormLayout">
+        <rowspec value="center:d:noGrow"/>
+        <colspec value="fill:d:grow"/>
+        <constraints>
+          <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+          <forms/>
+        </constraints>
+        <properties/>
+        <border type="none"/>
+        <children>
+          <component id="7638c" class="javax.swing.JCheckBox" binding="includeVanishingStatesCheckBox" default-binding="true">
+            <constraints>
+              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+              <forms/>
+            </constraints>
+            <properties>
+              <text value="Include Vanishing States"/>
+            </properties>
+          </component>
+        </children>
       </grid>
     </children>
   </grid>
