--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,5 +1,5 @@
 <div class="col-md-3">
-  <aside>
+  <aside class="affix">
     <div>
       <a href="https://github.com/sarahtattersall/PIPE/zipball/master" class="btn btn-primary download-spacing">
         <span class="glyphicon glyphicon-download"></span>
