--- a/pipe-module-gui/src/main/java/pipe/gui/reachability/ReachabilityGraph.form
+++ b/pipe-module-gui/src/main/java/pipe/gui/reachability/ReachabilityGraph.form
@@ -8,9 +8,11 @@
     <rowspec value="center:max(d;4px):noGrow"/>
     <rowspec value="top:3dlu:noGrow"/>
     <rowspec value="center:max(d;4px):noGrow"/>
+    <rowspec value="top:3dlu:noGrow"/>
+    <rowspec value="center:max(d;4px):noGrow"/>
     <colspec value="fill:d:grow"/>
     <constraints>
-      <xy x="20" y="20" width="554" height="610"/>
+      <xy x="20" y="20" width="554" height="635"/>
     </constraints>
     <properties>
       <enabled value="false"/>
@@ -58,7 +60,7 @@
               <forms/>
             </constraints>
             <properties>
-              <text value="Load from file"/>
+              <text value="Load from Petri net file"/>
             </properties>
           </component>
           <component id="34a50" class="javax.swing.JTextField" binding="petriNetNameLabel">
@@ -126,6 +128,29 @@
             </constraints>
             <properties>
               <text value="Include Vanishing States"/>
+            </properties>
+          </component>
+        </children>
+      </grid>
+      <grid id="f261a" layout-manager="FormLayout">
+        <rowspec value="center:d:grow"/>
+        <rowspec value="top:3dlu:noGrow"/>
+        <rowspec value="center:d:grow"/>
+        <colspec value="fill:d:noGrow"/>
+        <constraints>
+          <grid row="8" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+          <forms/>
+        </constraints>
+        <properties/>
+        <border type="none"/>
+        <children>
+          <component id="d18ac" class="javax.swing.JButton" binding="saveButton" default-binding="true">
+            <constraints>
+              <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+              <forms/>
+            </constraints>
+            <properties>
+              <text value="Save"/>
             </properties>
           </component>
         </children>
