--- a/pipe-module-gui/src/main/java/pipe/gui/reachability/ReachabilityGraph.form
+++ b/pipe-module-gui/src/main/java/pipe/gui/reachability/ReachabilityGraph.form
@@ -14,9 +14,11 @@
     <rowspec value="center:max(d;4px):noGrow"/>
     <rowspec value="top:3dlu:noGrow"/>
     <rowspec value="center:max(d;4px):noGrow"/>
+    <rowspec value="top:3dlu:noGrow"/>
+    <rowspec value="center:max(d;4px):noGrow"/>
     <colspec value="fill:d:grow"/>
     <constraints>
-      <xy x="20" y="20" width="1032" height="704"/>
+      <xy x="20" y="20" width="1032" height="730"/>
     </constraints>
     <properties>
       <enabled value="false"/>
@@ -56,7 +58,7 @@
       </component>
       <grid id="5507e" binding="resultsPanel" layout-manager="BorderLayout" hgap="0" vgap="0">
         <constraints>
-          <grid row="10" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+          <grid row="12" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
           <forms defaultalign-vert="false"/>
         </constraints>
         <properties>
@@ -73,7 +75,7 @@
         <rowspec value="center:d:grow"/>
         <colspec value="fill:d:noGrow"/>
         <constraints>
-          <grid row="12" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+          <grid row="14" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
           <forms/>
         </constraints>
         <properties/>
@@ -233,6 +235,22 @@
             </constraints>
             <properties>
               <text value="Include Vanishing States"/>
+            </properties>
+          </component>
+        </children>
+      </grid>
+      <grid id="f7008" binding="textResultsPanel" layout-manager="BorderLayout" hgap="0" vgap="0">
+        <constraints>
+          <grid row="10" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+          <forms/>
+        </constraints>
+        <properties/>
+        <border type="none"/>
+        <children>
+          <component id="894bb" class="javax.swing.JLabel" binding="textResultsLabel">
+            <constraints border-constraint="Center"/>
+            <properties>
+              <text value="Results:"/>
             </properties>
           </component>
         </children>
