--- a/pipe-module-gui/src/main/java/pipe/gui/analysis/GSPNAnalysis.form
+++ b/pipe-module-gui/src/main/java/pipe/gui/analysis/GSPNAnalysis.form
@@ -8,7 +8,7 @@
     <rowspec value="center:max(d;4px):noGrow"/>
     <rowspec value="top:3dlu:noGrow"/>
     <rowspec value="center:max(d;4px):noGrow"/>
-    <colspec value="fill:max(d;4px):noGrow"/>
+    <colspec value="fill:493px:noGrow"/>
     <colspec value="left:4dlu:noGrow"/>
     <colspec value="fill:d:grow"/>
     <colspec value="left:4dlu:noGrow"/>
@@ -30,15 +30,6 @@
         <border type="none"/>
         <children/>
       </grid>
-      <component id="7b5cd" class="javax.swing.JButton" binding="goButton" default-binding="true">
-        <constraints>
-          <grid row="2" column="4" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-          <forms defaultalign-horz="false"/>
-        </constraints>
-        <properties>
-          <text value="Go!"/>
-        </properties>
-      </component>
       <component id="e2163" class="javax.swing.JLabel" binding="textResultsLabel">
         <constraints>
           <grid row="4" column="0" row-span="1" col-span="5" vsize-policy="3" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
@@ -57,40 +48,15 @@
         <border type="none"/>
         <children/>
       </grid>
-      <grid id="3f42a" binding="generatePanel" layout-manager="FormLayout">
-        <rowspec value="center:d:noGrow"/>
-        <colspec value="fill:d:noGrow"/>
-        <colspec value="left:4dlu:noGrow"/>
-        <colspec value="fill:d:grow"/>
+      <grid id="3f42a" binding="generatePanel" layout-manager="BorderLayout" hgap="0" vgap="0">
         <constraints>
           <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
           <forms/>
         </constraints>
         <properties/>
         <border type="none"/>
-        <children>
-          <component id="c4f83" class="javax.swing.JLabel">
-            <constraints>
-              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-              <forms/>
-            </constraints>
-            <properties>
-              <text value="Number of threads:"/>
-            </properties>
-          </component>
-        </children>
+        <children/>
       </grid>
-      <component id="9c673" class="javax.swing.JTextField" binding="numberOfThreadsText">
-        <constraints>
-          <grid row="2" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
-            <preferred-size width="150" height="-1"/>
-          </grid>
-          <forms defaultalign-horz="false"/>
-        </constraints>
-        <properties>
-          <text value="4"/>
-        </properties>
-      </component>
     </children>
   </grid>
   <buttonGroups>
