--- a/pipe-module-gui/src/main/java/pipe/gui/reachability/ReachabilityGraph.form
+++ b/pipe-module-gui/src/main/java/pipe/gui/reachability/ReachabilityGraph.form
@@ -143,47 +143,11 @@
               <text value="Results:"/>
             </properties>
           </component>
-          <grid id="d2f73" binding="generatePanel" layout-manager="FormLayout">
-            <rowspec value="center:d:noGrow"/>
-            <colspec value="fill:d:noGrow"/>
-            <colspec value="left:4dlu:noGrow"/>
-            <colspec value="fill:d:grow"/>
-            <colspec value="left:4dlu:noGrow"/>
-            <colspec value="fill:d:grow"/>
+          <grid id="d2f73" binding="generatePanel" layout-manager="BorderLayout" hgap="0" vgap="0">
             <constraints border-constraint="North"/>
             <properties/>
             <border type="none"/>
-            <children>
-              <component id="a5eb2" class="javax.swing.JLabel">
-                <constraints>
-                  <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-                  <forms/>
-                </constraints>
-                <properties>
-                  <text value="Number of threads:"/>
-                </properties>
-              </component>
-              <component id="915c6" class="javax.swing.JTextField" binding="numberOfThreadsText">
-                <constraints>
-                  <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
-                    <preferred-size width="150" height="-1"/>
-                  </grid>
-                  <forms defaultalign-horz="false"/>
-                </constraints>
-                <properties>
-                  <text value="4"/>
-                </properties>
-              </component>
-              <component id="3fb2a" class="javax.swing.JButton" binding="goButton" default-binding="true">
-                <constraints>
-                  <grid row="0" column="4" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
-                  <forms defaultalign-horz="false" defaultalign-vert="false"/>
-                </constraints>
-                <properties>
-                  <text value="Generate!"/>
-                </properties>
-              </component>
-            </children>
+            <children/>
           </grid>
         </children>
       </grid>
